[package]
name = "byo-redis-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-std-test = "0.0.4"
signal-hook = "0.3.17"
